smooth curve added

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -132,7 +132,8 @@ nav ul {
   background-image: url(/img/img1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center; }
+  background-position: center;
+  border-radius: 0 0 240px 50%/60px; }
 
 .hero h2 {
   font-size: 4rem;
