--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -106,6 +106,7 @@ nav ul {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  border-radius: 0 0 240px 50%/60px;
 }
 
 .hero h2 {
