--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -129,7 +129,7 @@ nav ul {
   display: flex;
   justify-content: center;
   padding-top: 2rem;
-  background-image: url(/img/img1.jpg);
+  background-image: url(https://images.unsplash.com/photo-1478809319988-35cad52fd89c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=925&q=80);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
